tests/specs/check/check_js_flag/with_flag.out
Check [WILDCARD]main.js
TS2554 [ERROR]: Expected 2 arguments, but got 1.
console.log(Math.pow(""));
                 ~~~
    at file://[WILDCARD]/main.js:1:18

error: Type checking failed.
